Code analysis fixes.